# more-wallpapers

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: rust.yml
more-wallpapers/: Cargo.toml  README.md
more-wallpapers/src/: error.rs  lib.rs  macos.rs  wallpaper_crate.rs  windows.rs
more-wallpapers/src/linux/: cinnamon.rs  kde.rs  mod.rs  sway.rs  wallpaper_crate.rs  x11.rs  xfce.rs
mwallpapers/: Cargo.toml
mwallpapers/src/: main.rs
setmw/: Cargo.toml
setmw/src/: main.rs
