[package]
name = "more-wallpapers"
version = "0.0.0"
workspace = ".."
edition = "2021"
rust-version = "1.62"
repository ="https://github.com/Lukas1818/more-wallpapers"


[dependencies]
rand = { version = "0.8.5", features = ["alloc"], optional = true }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
wallpaper = { version = "3.2", optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dbus = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xrandr = "0.1"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
